--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "build": "echo \"Please implement your build script and modify scripts.build section in package.json\" && exit 1"
+    "dev": "node_modules/.bin/webpack-dev-server",
+    "build": "node_modules/.bin/webpack"
   },
   "repository": {
     "type": "git",
@@ -13,7 +14,21 @@
   "author": "yupeng12",
   "license": "UNLICENSED",
   "dependencies": {
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.5",
+    "css-loader": "^3.0.0",
+    "extract-text-webpack-plugin": "^4.0.0-beta.0",
+    "html-webpack-plugin": "^4.0.0-beta.3",
+    "install": "^0.13.0",
     "less": "^3.9.0",
-    "san": "^3.7.7"
+    "less-loader": "^5.0.0",
+    "npm": "^6.10.0",
+    "san": "^3.7.7",
+    "style-loader": "^0.23.1",
+    "webpack": "^4.35.2",
+    "webpack-dev-server": "^3.7.2"
+  },
+  "devDependencies": {
+    "webpack-cli": "^3.3.5"
   }
 }
